# Git-C

./: CMakeLists.txt
docs/plans/: 2026-03-02-clone-design.md
src/: constants.h  main.c
src/commands/: cat_file.c  clone.c  commands.c  commands.h  commit_tree.c  hash_object.c  init.c  ls_tree.c  write_tree.c
src/net/: http.c  http.h  pktline.c  pktline.h
src/objects/: object.c  object.h
src/pack/: packfile.c  packfile.h
src/utils/compression/: compression.c  compression.h
src/utils/directory/: directory.c  directory.h
src/utils/file/: file.c  file.h
src/utils/string/: string.c  string.h
